# RoadForge

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  package.json  pnpm-lock.yaml  roadmaps_app_roadmap.json
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_roadmap_domain_tables.py  0002_add_participant_revocation.py  0003_add_roadmap_versions.py  0004_add_participant_share_link_tracking.py  0005_add_public_viewer_tokens.py  0006_add_participant_session_expires_at.py  0007_add_relational_roadmap_projection.py  0008_backfill_participant_session_expiry.py  0009_add_task_claim_fields.py  0010_add_tag_registry.py
apps/api/src/api/: config.py  database.py  main.py
apps/api/src/api/middleware/: access_log.py  body_limit.py  cors.py  security_headers.py
apps/api/src/api/models/: __init__.py  roadmap.py
apps/api/src/api/routers/: health.py  roadmaps.py
apps/api/src/api/schemas/: activity.py  conflicts.py  events.py  join.py  limits.py  locks.py  roadmap.py  roadmap_core.py  shared.py  sharing.py  tags.py  tasks.py  (+2 more)
apps/api/tests/: conftest.py  helpers_projection.py  test_auth_and_share_links.py  test_body_limit.py  test_rate_limits.py  test_roadmap_conflicts.py  test_roadmap_projection_parity.py  test_roadmap_projection_read_flag.py  test_roadmap_projection_roundtrip.py  test_roadmap_updates.py  test_roadmap_versions.py  test_security_hardening.py  test_tag_registry.py  test_task_claim.py  test_task_done_patch.py  test_task_patch.py
(+336 files in other folders)
